--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="botao">Conhecer o Arthur</button>
             <button class="botao">fazer carteira A e B </button>
             <button class="botao">estudar pro enem</button>
-            <button class="botao">Vencer meus problemas</button>
+            <button class="botao"></button>
         </div>
     </section>
 </body>
